--- a/promopay/bower.json
+++ b/promopay/bower.json
@@ -10,6 +10,7 @@
     "moment": "~2.10.3",
     "angular-moment": "~0.10.1",
     "angular-ios9-uiwebview-patch": "~1.1.1",
-    "ngCordova": "~0.1.23-alpha"
+    "ngCordova": "~0.1.23-alpha",
+    "ng-cordova-oauth": "~0.2.2"
   }
 }
