--- a/promopay/bower.json
+++ b/promopay/bower.json
@@ -2,7 +2,8 @@
   "name": "PromoPay",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.1"
+    "ionic": "driftyco/ionic-bower#1.0.1",
+    "platform": "~1.3.1"
   },
   "dependencies": {
     "bourbon": "~4.2.3",
