[impl-NA] Implement moving offer impressions, load generated btoa token, reconstruct product loading views

--- a/promopay/ionic.project
+++ b/promopay/ionic.project
@@ -1,6 +1,12 @@
 {
   "name": "PromoPay",
   "app_id": "",
+  "proxies": [
+  {
+    "path": "/v1",
+    "proxyUrl": "http://192.168.0.252/api/v1/"
+  }
+],
   "gulpStartupTasks": [
     "default",
     "watch",
