--- a/promopay/package.json
+++ b/promopay/package.json
@@ -41,7 +41,7 @@
     "cordova-plugin-transport-security"
   ],
   "cordovaPlatforms": [
-    "android",
-    "ios"
+    "ios",
+    "android"
   ]
 }
