--- a/promopay/bower.json
+++ b/promopay/bower.json
@@ -12,6 +12,8 @@
     "angular-moment": "~0.10.1",
     "angular-ios9-uiwebview-patch": "~1.1.1",
     "ngCordova": "~0.1.23-alpha",
-    "ng-cordova-oauth": "~0.2.2"
+    "ng-cordova-oauth": "~0.2.2",
+    "angular-qrcode": "monospaced/angular-qrcode#~6.1.3",
+    "angular-qr": "~0.2.0"
   }
 }
