--- a/promopay/bower.json
+++ b/promopay/bower.json
@@ -2,8 +2,7 @@
   "name": "PromoPay",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.1",
-    "platform": "~1.3.1"
+    "ionic": "driftyco/ionic-bower#1.0.1"
   },
   "dependencies": {
     "bourbon": "~4.2.3",
@@ -12,7 +11,7 @@
     "angular-moment": "~0.10.1",
     "angular-ios9-uiwebview-patch": "~1.1.1",
     "ngCordova": "~0.1.23-alpha",
-    "ng-cordova-oauth": "~0.2.2",
+    "ng-cordova-oauth": "~0.2.3",
     "angular-qrcode": "monospaced/angular-qrcode#~6.1.3",
     "angular-qr": "~0.2.0"
   }
