[Impl-N/A] Implment AJAX loading screen for first time loading, remove broken screens and un needed controller methods, refractor ShopCtrl into a conditional loading API call rather than shotgun appraoch

--- a/promopay/package.json
+++ b/promopay/package.json
@@ -41,7 +41,7 @@
     "cordova-plugin-transport-security"
   ],
   "cordovaPlatforms": [
-    "ios",
-    "android"
+    "android",
+    "ios"
   ]
 }
